Launch harness front-ends: Gradle e2e, JUnit surface, spectre launch, docs (#208) (#308)
* Gradle launch path: loud warning sink + e2e (#208 P2)

- LaunchAndAttach.launch accepts a warningSink (default System.err) so
  Gradle-ish caveats are emitted before readiness.
- LaunchAndAttachGradleIntegrationTest drives ./gradlew :agent-test-fixture:run
  through the harness (warning, attach, teardown without killing daemons).
- Fixture run task enables -XX:+EnableDynamicAgentLoading for Gradle-path attach.

* Add testing launch surface, spectre launch CLI, and guide docs (#208 P3/P4)

- LaunchAndAttachExtension / LaunchAndAttachRule compose with JUnit lifecycle
- spectre launch -- <command> with --once, -C, --app-name
- Guide updates: junit.md, cli.md, troubleshooting.md (launch harness section)

* Address review: launch IOException, session teardown, agent runtime install

- Catch IOException from LaunchAndAttach in spectre launch
- Close prior session before startSession on the JUnit rule
- Install embedded agent-runtime for packaged CLI launches
- Prefer store-backed sessions for parallel JUnit extension use
- Fix always-true gradlew executable assume

* Extract LaunchCommand to its own file (detekt TooManyFunctions)

* Make LaunchAndAttachExtension parallel-safe via ParameterResolver

Inject LaunchedSession/AttachedAutomator from the per-invocation store so
parallel JUnit methods do not share launchExt.launched. Update ABI, docs,
and harden ProcessTreeTeardownTest against ProcessHandle/Process isAlive lag.

* Isolate LaunchAndAttachExtension store namespace per instance

Two @RegisterExtension fields must not share one class-level store key;
each instance now namespaces its per-invocation LaunchedSession.

* Disambiguate multi-extension launch injection; thread-local accessors

Parameter injection only when a single LaunchAndAttachExtension is registered.
With two or more, use property accessors (now thread-local + per-instance store).

* Count enclosing-class launch e